--- a/Dockerfile3
+++ b/Dockerfile3
@@ -25,7 +25,7 @@ RUN mkdir -p /home/boost && tar zxf boost_${BOOST_VERSION_}.tar.gz -C /home/boos
 RUN rm  /usr/include/boost_${BOOST_VERSION_}.tar.gz
 RUN bash /home/boost/bootstrap.sh --prefix=/usr --exec-prefix=/usr
 
-#RUN ["/home/boost/b2"  "install"]
+#RUN ["/home/boost/b2" , "install"]
 #RUN rm -rf /home/boost
 
 
